Make table of contents a tiered ordered list

--- a/www/html/css.html
+++ b/www/html/css.html
@@ -40,184 +40,104 @@
                 Les standards définissant CSS sont publiés par le World Wide Web Consortium (W3C). Introduit au milieu
                 des années 1990, CSS devient couramment utilisé dans la conception de sites web et bien pris en charge
                 par les navigateurs web dans les années 2000.</p>
-            <ul>
+            <ol>
                 <li>
-                    <a href="#Histoire-du-CSS">
-                        <span>1.</span>
-                        <span>Histoire du CSS</span>
-                    </a>
-                    <ul>
+                    <a href="#Histoire-du-CSS">Histoire du CSS</a>
+                    <ol>
                         <li>
-                            <a href="#Un-concept">
-                                <span>1.1</span>
-                                <span>Un concept parmi d'autres, présent dès l'origine du web</span>
-                            </a>
+                            <a href="#Un-concept">Un concept parmi d'autres, présent dès l'origine du web</a>
                         </li>
                         <li>
-                            <a href="#Les-premiers">
-                                <span>1.2</span>
-                                <span>Les premiers développements</span>
-                            </a>
+                            <a href="#Les-premiers">Les premiers développements</a>
                         </li>
                         <li>
-                            <a href="#Vers-une">
-                                <span>1.3</span>
-                                <span>Vers une maturation difficile</span>
-                            </a>
-                            <ul>
+                            <a href="#Vers-une">Vers une maturation difficile</a>
+                            <ol>
                                 <li>
-                                    <a href="#CSS1">
-                                        <span>1.3.1</span>
-                                        <span>CSS1, des implémentations difficiles pendant la guerre des navigateurs</span>
-                                    </a>
+                                    <a href="#CSS1">CSS1, des implémentations difficiles pendant la guerre des
+                                        navigateurs</a>
                                 </li>
                                 <li>
-                                    <a href="#CSS2">
-                                        <span>1.3.2</span>
-                                        <span>CSS2, des ambitions précipitées</span>
-                                    </a>
+                                    <a href="#CSS2">CSS2, des ambitions précipitées</a>
                                 </li>
                                 <li>
-                                    <a href="#CSS-2.1">
-                                        <span>1.3.3</span>
-                                        <span>CSS 2.1, retour aux implémentations</span>
-                                    </a>
+                                    <a href="#CSS-2.1">CSS 2.1, retour aux implémentations</a>
                                 </li>
-                            </ul>
+                            </ol>
                         </li>
                         <li>
-                            <a href="#CSS3">
-                                <span>1.4</span>
-                                <span>CSS3</span>
-                            </a>
+                            <a href="#CSS3">CSS3</a>
                         </li>
                         <li>
-                            <a href="#CSS4">
-                                <span>1.5</span>
-                                <span>CSS4</span>
-                            </a>
+                            <a href="#CSS4">CSS4</a>
                         </li>
-                    </ul>
+                    </ol>
                 </li>
                 <li>
-                    <a href="#Enjeux-et-principes">
-                        <span>2.</span>
-                        <span>Enjeux et principes</span>
-                    </a>
-                    <ul>
+                    <a href="#Enjeux-et-principes">Enjeux et principes</a>
+                    <ol>
                         <li>
-                            <a href="#Enjeux">
-                                <span>2.1</span>
-                                <span>Enjeux</span>
-                            </a>
-                            <ul>
+                            <a href="#Enjeux">Enjeux</a>
+                            <ol>
                                 <li>
-                                    <a href="#Séparation">
-                                        <span>2.1.1</span>
-                                        <span>Séparation entre la structure et la présentation</span>
-                                    </a>
+                                    <a href="#Séparation">Séparation entre la structure et la présentation</a>
                                 </li>
                                 <li>
-                                    <a href="#Présentation">
-                                        <span>2.1.2</span>
-                                        <span>Présentation selon le média</span>
-                                    </a>
+                                    <a href="#Présentation">Présentation selon le média</a>
                                 </li>
                                 <li>
-                                    <a href="#Cascade-des-styles">
-                                        <span>2.1.3</span>
-                                        <span>Cascade des styles</span>
-                                    </a>
+                                    <a href="#Cascade-des-styles">Cascade des styles</a>
                                 </li>
-                            </ul>
+                            </ol>
                         </li>
                         <li>
-                            <a href="#Principes">
-                                <span>2.2</span>
-                                <span>Principes techniques et syntaxe de CSS</span>
-                            </a>
-                            <ul>
+                            <a href="#Principes">Principes techniques et syntaxe de CSS</a>
+                            <ol>
                                 <li>
-                                    <a href="#Concepts">
-                                        <span>2.2.1</span>
-                                        <span>Concepts fondamentaux : boîtes et flux CSS</span>
-                                    </a>
+                                    <a href="#Concepts">Concepts fondamentaux : boîtes et flux CSS</a>
                                 </li>
                                 <li>
-                                    <a href="#Propriétés">
-                                        <span>2.2.2</span>
-                                        <span>Propriétés et valeurs</span>
-                                    </a>
+                                    <a href="#Propriétés">Propriétés et valeurs</a>
                                 </li>
                                 <li>
-                                    <a href="#Sélecteurs">
-                                        <span>2.2.3</span>
-                                        <span>Sélécteurs et blocs de règles</span>
-                                    </a>
+                                    <a href="#Sélecteurs">Sélécteurs et blocs de règles</a>
                                 </li>
                                 <li>
-                                    <a href="#CSSOO">
-                                        <span>2.2.4</span>
-                                        <span>CSSOO</span>
-                                    </a>
+                                    <a href="#CSSOO">CSSOO</a>
                                 </li>
                                 <li>
-                                    <a href="#BEM">
-                                        <span>2.2.5</span>
-                                        <span>BEM</span>
-                                    </a>
+                                    <a href="#BEM">BEM</a>
                                 </li>
-                            </ul>
+                            </ol>
                         </li>
-                    </ul>
+                    </ol>
                 </li>
                 <li>
-                    <a href="#Limites">
-                        <span>3.</span>
-                        <span>Limites de CSS</span>
-                    </a>
-                    <ul>
+                    <a href="#Limites">Limites de CSS</a>
+                    <ol>
                         <li>
-                            <a href="#Indépendance">
-                                <span>3.1</span>
-                                <span>Indépendance entre présentation et structure</span>
-                            </a>
+                            <a href="#Indépendance">Indépendance entre présentation et structure</a>
                         </li>
                         <li>
-                            <a href="#Accessibilité">
-                                <span>3.2</span>
-                                <span>Accessibilité</span>
-                            </a>
+                            <a href="#Accessibilité">Accessibilité</a>
                         </li>
                         <li>
-                            <a href="#Simplicité">
-                                <span>3.3</span>
-                                <span>Simplicité</span>
-                            </a>
+                            <a href="#Simplicité">Simplicité</a>
                         </li>
-                    </ul>
+                    </ol>
                 </li>
                 <li>
-                    <a href="#Standardisation">
-                        <span>4.</span>
-                        <span>Standardisation</span>
-                    </a>
-                    <ul>
+                    <a href="#Standardisation">Standardisation</a>
+                    <ol>
                         <li>
-                            <a href="#Frameworks">
-                                <span>4.1</span>
-                                <span>Frameworks</span>
-                            </a>
+                            <a href="#Frameworks">Frameworks</a>
                         </li>
                         <li>
-                            <a href="#Méthodologies">
-                                <span>4.2</span>
-                                <span>Méthodologies de conception</span>
-                            </a>
+                            <a href="#Méthodologies">Méthodologies de conception</a>
                         </li>
-                    </ul>
+                    </ol>
                 </li>
-            </ul>
+            </ol>
             <h2 id="Histoire-du-CSS">Histoire du CSS</h2>
             <h3 id="Un-concept">Un concept parmi d'autres, présent dès l'origine du web</h3>
             <p>
