--- a/www/html/html.html
+++ b/www/html/html.html
@@ -37,64 +37,37 @@
         <article>
             <p>Le HyperText Markup Language, généralement abrégé HTML ou, dans sa dernière version, HTML5, est le
                 langage de balisage conçu pour représenter les pages web.</p>
-            <ul>
+            <ol>
                 <li>
-                    <a href="#Dénominations">
-                        <span>1.</span>
-                        <span>Dénominations</span>
-                    </a>
+                    <a href="#Dénominations">Dénominations</a>
                 </li>
                 <li>
-                    <a href="#Evolution-du-langage">
-                        <span>2.</span>
-                        <span>Evolution du langage</span>
-                    </a>
+                    <a href="#Evolution-du-langage">Evolution du langage</a>
                 </li>
                 <li>
-                    <a href="#Description-de-HTML">
-                        <span>3.</span>
-                        <span>Description de HTML</span>
-                    </a>
-                    <ul>
+                    <a href="#Description-de-HTML">Description de HTML</a>
+                    <ol>
                         <li>
-                            <a href="#Syntaxe-de-HTML">
-                                <span>3.1</span>
-                                <span>Syntaxe de HTML</span>
-                            </a>
+                            <a href="#Syntaxe-de-HTML">Syntaxe de HTML</a>
                         </li>
                         <li>
-                            <a href="#Structure-des-documents-HTML">
-                                <span>3.2</span>
-                                <span>Structure des documents HTML</span>
-                            </a>
+                            <a href="#Structure-des-documents-HTML">Structure des documents HTML</a>
                         </li>
                         <li>
-                            <a href="#Eléments-de-HTML">
-                                <span>3.3</span>
-                                <span>Eléments de HTML</span>
-                            </a>
+                            <a href="#Eléments-de-HTML">Eléments de HTML</a>
                         </li>
                         <li>
-                            <a href="#Attributs-de-HTML">
-                                <span>3.4</span>
-                                <span>Attributs de HTML</span>
-                            </a>
+                            <a href="#Attributs-de-HTML">Attributs de HTML </a>
                         </li>
                         <li>
-                            <a href="#Jeux-de-caractères">
-                                <span>3.5</span>
-                                <span>Jeux de caractères</span>
-                            </a>
-                            <ul>
+                            <a href="#Jeux-de-caractères">Jeux de caractères</a>
+                            <ol>
                                 <li>
-                                    <a href="#Technique-d-échappement">
-                                        <span>3.5.1</span>
-                                        <span>Technique d'échappement</span>
-                                    </a>
+                                    <a href="#Technique-d-échappement">Technique d'échappement</a>
                                 </li>
-                            </ul>
+                            </ol>
                         </li>
-                    </ul>
+                    </ol>
                 </li>
                 <li>
                     <a href="#Inopérabilité-de-HTML">
@@ -102,7 +75,7 @@
                         <span>Inopérabilité de HTML</span>
                     </a>
                 </li>
-            </ul>
+            </ol>
             <h2 id="Dénominations">Dénominations</h2>
             <p>
                 L’anglais « Hypertext Markup Language » se traduit littéralement en « langage de balisage d’hypertexte
