--- a/www/html/css.html
+++ b/www/html/css.html
@@ -22,6 +22,7 @@
         <ul class="list-option">
             <li><a href="login.html">Log&nbsp;in</a></li>
             <li><a href="html.html">HTML</a></li>
+            <li>CSS</li>
             <li><a href="js.html">JavaScript</a></li>
         </ul>
     </nav>
