--- a/www/html/html.html
+++ b/www/html/html.html
@@ -21,6 +21,7 @@
     <nav>
         <ul class="list-option">
             <li><a href="login.html">Log&nbsp;in</a></li>
+            <li>HTML</li>
             <li><a href="css.html">CSS</a></li>
             <li><a href="js.html">JavaScript</a></li>
         </ul>
