--- a/www/html/js.html
+++ b/www/html/js.html
@@ -23,6 +23,7 @@
             <li><a href="login.html">Log&nbsp;in</a></li>
             <li><a href="html.html">HTML</a></li>
             <li><a href="css.html">CSS</a></li>
+            <li>JavaScript</li>
         </ul>
     </nav>
     <section>
