--- a/www/html/login.html
+++ b/www/html/login.html
@@ -20,6 +20,7 @@
 <div class="side-by-side">
     <nav>
         <ul class="list-option">
+            <li>Log&nbsp;in</li>
             <li><a href="html.html">HTML</a></li>
             <li><a href="css.html">CSS</a></li>
             <li><a href="js.html">JavaScript</a></li>
