--- a/www/html/css.html
+++ b/www/html/css.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <noscript>
-    <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'aie désactivé</p>
+    <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
 <header>
     <h1 class="top" id="top">
@@ -101,7 +101,7 @@
                                     <a href="#Propriétés">Propriétés et valeurs</a>
                                 </li>
                                 <li>
-                                    <a href="#Sélecteurs">Sélécteurs et blocs de règles</a>
+                                    <a href="#Sélecteurs">Sélecteurs et blocs de règles</a>
                                 </li>
                                 <li>
                                     <a href="#CSSOO">CSSOO</a>
