--- a/www/html/js.html
+++ b/www/html/js.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <noscript>
-    <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'aie désactivé</p>
+    <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'ait désactivé</p>
 </noscript>
 <header>
     <h1 class="top" id="top">
