Fix bottom paddings again

--- a/www/html/login.html
+++ b/www/html/login.html
@@ -17,7 +17,7 @@
         </a>
     </h1>
 </header>
-<div class="side-by-side">
+<main class="side-by-side">
     <nav>
         <ul class="list-option">
             <li>Log&nbsp;in</li>
@@ -57,7 +57,7 @@
             <input id="login-submit" class="bouton-nl" type="submit" value="Soumettre" disabled>
         </div>
     </form>
-</div>
+</main>
 <footer>copyright stuff</footer>
 <script src="../js/login.js"></script>
 </body>
