--- a/www/index.html
+++ b/www/index.html
@@ -17,26 +17,28 @@
         </a>
     </h1>
 </header>
-<header><h2 id="sommaire">Sommaire</h2></header>
-<nav id="list">
-    <ul class="list-option index-list">
-        <li><a href="html/login.html">Log in</a></li>
-        <li><a href="html/html.html">HTML</a></li>
-        <li><a href="html/css.html">CSS</a></li>
-        <li><a href="html/js.html">JavaScript</a></li>
-    </ul>
-</nav>
-<form class="newsletter" method="post">
-    <fieldset class="newsletterbox">
-        <div class="contour">
-            <div class="champ-recherche">
-                <label for="newsletter">Newsletter</label>
-                <input class="newsletter" name="newsletter" id="newsletter" placeholder="Entrez votre email">
+<main>
+    <header><h2 id="sommaire">Sommaire</h2></header>
+    <nav id="list">
+        <ul class="list-option index-list">
+            <li><a href="html/login.html">Log in</a></li>
+            <li><a href="html/html.html">HTML</a></li>
+            <li><a href="html/css.html">CSS</a></li>
+            <li><a href="html/js.html">JavaScript</a></li>
+        </ul>
+    </nav>
+    <form class="newsletter" method="post">
+        <fieldset class="newsletterbox">
+            <div class="contour">
+                <div class="champ-recherche">
+                    <label for="newsletter">Newsletter</label>
+                    <input class="newsletter" name="newsletter" id="newsletter" placeholder="Entrez votre email">
+                </div>
+                <button class="bouton-nl"><a href="img/y2_web.mp4">Soumettre</a></button>
             </div>
-            <button class="bouton-nl"><a href="img/y2_web.mp4">Soumettre</a></button>
-        </div>
-    </fieldset>
-</form>
+        </fieldset>
+    </form>
+</main>
 <footer>copyright stuff</footer>
 </body>
 </html>
