--- a/www/html/html.html
+++ b/www/html/html.html
@@ -20,10 +20,10 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
-            <li><a href="login.html">Log&nbsp;in</a></li>
+            <li><a class="link" href="login.html">Log&nbsp;in</a></li>
             <li>HTML</li>
-            <li><a href="css.html">CSS</a></li>
-            <li><a href="js.html">JavaScript</a></li>
+            <li><a class="link" href="css.html">CSS</a></li>
+            <li><a class="link" href="js.html">JavaScript</a></li>
         </ul>
     </nav>
     <section>
@@ -40,38 +40,38 @@
                 langage de balisage conçu pour représenter les pages web.</p>
             <ol>
                 <li>
-                    <a href="#Dénominations">Dénominations</a>
+                    <a class="link" href="#Dénominations">Dénominations</a>
                 </li>
                 <li>
-                    <a href="#Evolution-du-langage">Evolution du langage</a>
+                    <a class="link" href="#Evolution-du-langage">Evolution du langage</a>
                 </li>
                 <li>
-                    <a href="#Description-de-HTML">Description de HTML</a>
+                    <a class="link" href="#Description-de-HTML">Description de HTML</a>
                     <ol>
                         <li>
-                            <a href="#Syntaxe-de-HTML">Syntaxe de HTML</a>
+                            <a class="link" href="#Syntaxe-de-HTML">Syntaxe de HTML</a>
                         </li>
                         <li>
-                            <a href="#Structure-des-documents-HTML">Structure des documents HTML</a>
+                            <a class="link" href="#Structure-des-documents-HTML">Structure des documents HTML</a>
                         </li>
                         <li>
-                            <a href="#Eléments-de-HTML">Eléments de HTML</a>
+                            <a class="link" href="#Eléments-de-HTML">Eléments de HTML</a>
                         </li>
                         <li>
-                            <a href="#Attributs-de-HTML">Attributs de HTML </a>
+                            <a class="link" href="#Attributs-de-HTML">Attributs de HTML </a>
                         </li>
                         <li>
-                            <a href="#Jeux-de-caractères">Jeux de caractères</a>
+                            <a class="link" href="#Jeux-de-caractères">Jeux de caractères</a>
                             <ol>
                                 <li>
-                                    <a href="#Technique-d-échappement">Technique d'échappement</a>
+                                    <a class="link" href="#Technique-d-échappement">Technique d'échappement</a>
                                 </li>
                             </ol>
                         </li>
                     </ol>
                 </li>
                 <li>
-                    <a href="#Inopérabilité-de-HTML">
+                    <a class="link" href="#Inopérabilité-de-HTML">
                         <span>4.</span>
                         <span>Inopérabilité de HTML</span>
                     </a>
@@ -88,7 +88,7 @@
             <h2 id="Evolution-du-langage">Evolution du langage</h2>
             <p>
                 Durant la première moitié des années 1990, avant l'apparition des technologies Web comme le langage <a
-                    href="js.html">JavaScript</a> (JS), les <a href="css.html">feuilles de style en cascade</a> (CSS) et
+                    href="js.html">JavaScript</a> (JS), les <a class="link" href="css.html">feuilles de style en cascade</a> (CSS) et
                 le Document Object Model (DOM), l'évolution de HTML a dicté l'évolution du World Wide Web. Depuis 1997
                 et HTML 4, l'évolution de HTML a fortement ralenti; dix ans plus tard, HTML 4 reste utilisé dans les
                 pages web. En 2008, la spécification du HTML5 est à l'étude et devient d'usage courant dans la seconde
@@ -118,7 +118,7 @@
             </p>
             <h3 id="Structure-des-documents-HTML">Structure des documents HTML</h3>
             <p>
-                Avec l’introduction des <a href="css.html">Cascading Style Sheets</a> et du Document Object Model, il a
+                Avec l’introduction des <a class="link" href="css.html">Cascading Style Sheets</a> et du Document Object Model, il a
                 fallu considérer que les documents HTML ont une véritable structure en arbre, avec un élément racine
                 contenant tous les autres éléments. Les balises ouvrantes et fermantes de ces éléments restent
                 d’ailleurs optionnelles. Cependant, aujourd’hui, on a tendance à baliser chaque élément et à indiquer la
@@ -159,7 +159,7 @@
             <h4>Tables</h4>
             <p>
                 Cette fonctionnalité sert formellement à la présentation de données tabulaires, mais a été surtout
-                exploitée pour ses capacités de mise en page avant que les <a href="css.html">feuilles de style en
+                exploitée pour ses capacités de mise en page avant que les <a class="link" href="css.html">feuilles de style en
                 cascade</a> (CSS) atteignent un degré de maturité suffisant.
             </p>
             <h4>Hyperliens</h4>
@@ -181,11 +181,11 @@
             <h4>Style de la présentation</h4>
             <p>
                 Chaque élément, voire tout le document, peut se voir appliquer des styles. Les styles sont définis dans
-                le document ou proviennent de <a href="css.html">feuilles de style en cascade</a> (CSS) externes.
+                le document ou proviennent de <a class="link" href="css.html">feuilles de style en cascade</a> (CSS) externes.
             </p>
             <h4>Marquage de présentation du texte</h4>
             <p>
-                Développé avant la généralisation de <a href="css.html">CSS</a> pour fournir rapidement des
+                Développé avant la généralisation de <a class="link" href="css.html">CSS</a> pour fournir rapidement des
                 fonctionnalités aux graphistes. D’usage désormais officiellement déconseillé pour la plus grande partie.
             </p>
             <h4>Cadres</h4>
@@ -201,7 +201,7 @@
             <h4>Scripts</h4>
             <p>
                 Permet d’associer des morceaux de programmes aux actions des utilisateurs sur le document. Les langages
-                utilisés sont généralement <a href="js.html">JavaScript</a> et VBScript.
+                utilisés sont généralement <a class="link" href="js.html">JavaScript</a> et VBScript.
             </p>
             <h3 id="Attributs-de-HTML">Attributs de HTML</h3>
             <p>
