--- a/www/html/js.html
+++ b/www/html/js.html
@@ -20,9 +20,9 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
-            <li><a href="login.html">Log&nbsp;in</a></li>
-            <li><a href="html.html">HTML</a></li>
-            <li><a href="css.html">CSS</a></li>
+            <li><a class="link" href="login.html">Log&nbsp;in</a></li>
+            <li><a class="link" href="html.html">HTML</a></li>
+            <li><a class="link" href="css.html">CSS</a></li>
             <li>JavaScript</li>
         </ul>
     </nav>
