--- a/www/html/login.html
+++ b/www/html/login.html
@@ -21,9 +21,9 @@
     <nav>
         <ul class="list-option">
             <li>Log&nbsp;in</li>
-            <li><a href="html.html">HTML</a></li>
-            <li><a href="css.html">CSS</a></li>
-            <li><a href="js.html">JavaScript</a></li>
+            <li><a class="link" href="html.html">HTML</a></li>
+            <li><a class="link" href="css.html">CSS</a></li>
+            <li><a class="link" href="js.html">JavaScript</a></li>
         </ul>
     </nav>
     <form action="../htbin/register.py" method="post" id="login-form">
