--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,10 @@
     <header><h2 id="sommaire">Sommaire</h2></header>
     <nav id="list">
         <ul class="list-option index-list">
-            <li><a href="html/login.html">Log in</a></li>
-            <li><a href="html/html.html">HTML</a></li>
-            <li><a href="html/css.html">CSS</a></li>
-            <li><a href="html/js.html">JavaScript</a></li>
+            <li><a class="link" href="html/login.html">Log in</a></li>
+            <li><a class="link" href="html/html.html">HTML</a></li>
+            <li><a class="link" href="html/css.html">CSS</a></li>
+            <li><a class="link" href="html/js.html">JavaScript</a></li>
         </ul>
     </nav>
     <form class="newsletter" method="post">
