--- a/www/index.html
+++ b/www/index.html
@@ -18,8 +18,8 @@
     </h1>
 </header>
 <main>
-    <header><h2 id="sommaire">Sommaire</h2></header>
-    <nav id="list">
+    <header><h2 id="titre-sommaire">Sommaire</h2></header>
+    <nav id="sommaire">
         <ul class="list-option index-list">
             <li><a class="link" href="html/login.html">Log in</a></li>
             <li><a class="link" href="html/html.html">HTML</a></li>
