--- a/www/html/css.html
+++ b/www/html/css.html
@@ -611,8 +611,8 @@
             </ul>
             <h4 id="Propriétés">Propriétés et valeurs</h4>
             <p>
-                Les caractéristiques applicables aux boîtes CSS sont exprimées sous forme de couples <code>propriété:
-                valeur</code>.<br>Les propriétés sont libellées à l'aide de mots-outils anglais tels que « width »
+                Les caractéristiques applicables aux boîtes CSS sont exprimées sous forme de couples <code>propriété: valeur</code>. 
+				<br>Les propriétés sont libellées à l'aide de mots-outils anglais tels que « width »
                 (largeur), « font-size » (taille de la police de caractères) ou « voice-volume » (volume sonore du rendu
                 vocal).<br>Les valeurs peuvent être selon les cas exprimées à l'aide d'unités normalisées par ailleurs,
                 ou de mots-clés propres à CSS. Par exemple, une couleur de fond ou de texte peut être exprimée à l'aide
